unpackaged/main/default/objects/Privacy_and_Security_Risk__c/Privacy_and_Security_Risk__c.object-meta.xml
<CustomObject>
    <description>To capture potential and confirmed privacy and/or security risks</description>
    <label>Privacy and Security Risk</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Privacy and Security Risk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy and Security Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>