unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Affected_Data__c.field-meta.xml
<CustomField>
    <fullName>Affected_Data__c</fullName>
    <inlineHelpText>Where is the risk? What data has been involved/affected? e.g. Student details, personal address</inlineHelpText>
    <label>Affected Data</label>
    <type>TextArea</type>
</CustomField>