unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Case where privacy or security risk has been identified</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Privacy and Security Risks</relationshipLabel>
    <relationshipName>Privacy_and_Security_Risks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>