unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Date_Time_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Event__c</fullName>
    <inlineHelpText>When did the risk occur?</inlineHelpText>
    <label>Date/Time Event</label>
    <type>DateTime</type>
</CustomField>