unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Date_Time_Identified__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Identified__c</fullName>
    <inlineHelpText>When was TechnologyOne notified of this risk?</inlineHelpText>
    <label>Date/Time Identified</label>
    <type>DateTime</type>
</CustomField>