unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>What happened? Investigate and identify the risk and risk type and include as much information as possible.</inlineHelpText>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>