unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Isolated__c.field-meta.xml
<CustomField>
    <fullName>Isolated__c</fullName>
    <inlineHelpText>Has the risk been isolated? (Has it been stopped or isolated?/Was it a one off?)</inlineHelpText>
    <label>Isolated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>