unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/PII_Data_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>PII_Data_Severity_Level__c</fullName>
    <inlineHelpText>LOW: Name (first &amp; last) only or work email
MEDIUM: Name &amp; email only
HIGH: Name, email &amp; home address only
EXTREME: Name, email, home address &amp; any of:
DOB, bank details, tax file no, passport no, health info, cc details, remuneration, religion</inlineHelpText>
    <label>PII Data Severity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>