unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Risk_Jira_Issue_Link__c.field-meta.xml
<CustomField>
    <fullName>Risk_Jira_Issue_Link__c</fullName>
    <formula>Hyperlink(&quot;https://jiradev.code.one/browse/&quot; &amp; Risk_Jira_Number__c , Risk_Jira_Number__c )</formula>
    <label>Risk Jira Issue Link</label>
    <type>Text</type>
</CustomField>