unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Risk_Jira_Number__c.field-meta.xml
<CustomField>
    <fullName>Risk_Jira_Number__c</fullName>
    <inlineHelpText>Enter privacy and security risk jira number for tracking purposes. Note: there is no jira integration / sync</inlineHelpText>
    <label>Risk Jira Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>