unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Risk</fullName>
                <default>true</default>
                <label>Potential Risk</label>
            </value>
            <value>
                <fullName>Confirmed Risk Under Investigation</fullName>
            </value>
            <value>
                <fullName>Confirmed Risk Finalised</fullName>
            </value>
            <value>
                <fullName>No Risk Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>