unpackaged/main/default/objects/Privacy_and_Security_Risk__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <inlineHelpText>Enter a brief title to summarise the risk and risk type</inlineHelpText>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>